--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_home">home</string>
+    <string name="option_get_place">title</string>
+    <string name="default_info_title">title</string>
+    <string name="default_info_snippet">snippet</string>
+    <string name="pick_place">pick place</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
