--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,21 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_home">home</string>
+    <string name="title_home">Consultation</string>
+    <string name="follow">Mon suivi</string>
+    <string name="pharmacie_proche">pharmacie proche</string>
+    <string name="consultation">Consultation</string>
+    <string name="resum">Résumé</string>
+    <string name="thank">Merci,</string>
+    <string name="end_consultation">Votre consultations est terminée</string>
+    <string name="remind_me">Me faire un rappel</string>
+    <string name="recap_drug_store">Pharmacie proche</string>
+    <string name="it_ok">C\'est bon</string>
+    <string name="recap_symptome">Symptôme</string>
+    <string name="traitement">Traitement</string>
+    <string name="end_call">Fin de l\'appel</string>
+    <string name="menu_profil">Profil</string>
+    <string name="menu_follow">Suivi</string>
+    <string name="channel_name">test</string>
+    <string name="channel_description">test description</string>
 </resources>
