--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="end_call">Fin de l\'appel</string>
     <string name="menu_profil">Profil</string>
     <string name="menu_follow">Suivi</string>
-    <string name="channel_name">test</string>
-    <string name="channel_description">test description</string>
+    <string name="channel_name">feelae</string>
+    <string name="channel_description">rappel de prise de traitement</string>
 </resources>
